2011-06-29 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    Add check on satellite map object allocation.

    * src/gtk-sat-module.c
    Add check on mod->grid allocation.


2011-06-29 Charles Suprin <hamaa1vs at gmail.com>

    * src/tle-update.c
    Fix SEGFAULT in tle-update.c when unable to open file for writing in network updates.


2011-06-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/sat-log.c
    Fix log retention and deletion.


2011-06-25 Charles Suprin <hamaa1vs at gmail.com>

    * src/qth-data.c
    Add support for gpsd 2.96 and cleanup comments.


2011-06-20 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    * src/gtk-polar-view.c
    Change naos logic to avoid a daynum 2458849.5 (Y2021?) problem.

    * src/main.c
    Move log closing and module saving until after gtk has shut down.


2011-06-19 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    Remove decayed satellite object from hash.


2011-06-07 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-polar-view.c:
    Remove decayed satellites from polar view.


2011-06-05 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    Add TX cycle function for full duplex radios.
    Fixes bug 3272993: Issue controlling Yaesu FT-847.


2011-06-04 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    Attempt to fix bug #3272993: Issue controlling Yaesu FT-847.
    Coding style clean up.


2011-06-04 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    * src/gtk-polar-view.c
    Reset satellite when reseting NAOS in sat-map and polar views.


2011-05-31 Charles Suprin <hamaa1vs at gmail.com>

    * src/sgpsdp/sgp_time.c
    * src/sgpsdp/sgp4sdp4.h
    * src/gtk-sat-module-tmg.c
    Fix discrepancy in year convention with Time_to_UTC between Julian_Date
    convention and mktime convention.
    Fixes Bug 3309110: 100% on manual time adjustment.
    Fixes part of Ubuntu Bug #789691.

